--- a/CT/.classpath
+++ b/CT/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpclient-cache-4.3.1.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpcore-4.3.2.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpcore-nio-4.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
