--- a/CT/.classpath
+++ b/CT/.classpath
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/commons-codec-1.6.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/commons-logging-1.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpasyncclient-4.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpasyncclient-cache-4.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpclient-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpclient-cache-4.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpcore-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/httpcomponents-asyncclient-4.0.1-bin/httpcomponents-asyncclient-4.0.1/lib/httpcore-nio-4.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/java-json.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpasyncclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpasyncclient-cache-4.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpclient-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpclient-cache-4.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpcore-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/httplib/httpcore-nio-4.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/java-json.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
